name:                BayHac
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/halfaya/BayHac#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          leo@halfaya.org
copyright:           2017 John Leo
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vector
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable BayHac
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, BayHac
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/halfaya/BayHac
